Fri 09 Jul 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add doc tests for internal macros (Run make test:doc run make test:all)
	* Move assets files (static) to nib crate
	* Add documentation theme support

Thu 24 Jun 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release nib-server v0.0.2
	* Release nib-cli v0.0.3
	* Release nib v0.0.8
	* Update tokio v1.7.x and hyper to v0.14.x (nib-server)

Tue 22 Jun 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update rst_{parser,renderer} and document_tree to 0.4.0 (nib)

Thu 27 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Fix coding style for Rust stable

Fri 29 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version nib 0.0.7
	* Sort (reverse) entries on index.html (nib)

Thu 28 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove unnecessary templates from theme dir (nib-cli)
	* Remove unnecessary assets from theme dir (nib)

Mon 25 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version nib 0.0.6, nib-cli 0.0.1 and nib-server 0.0.1
	* Setup CI (.gitlab-ci.yml)
	* Fix same binary name issue on generate doc (omit doc for nib-cli)
	* Rename RELEASE.md HISTORY.md (due to naming similarity issue to README.md)
	* Introduce workspace for nib, nib-cli and nib-server

Sun 24 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.5

Sat 23 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add syntax highlight support for code block
	* Refactor HTML rendiring

Mon 18 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.4
	* Add Makefile into exclude
	* Fix embedded default theme rendering
	* Update style for default theme

Sun 17 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove unnecessary CODEOWNERS

Fri 15 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.3