@@ -3,8 +3,13 @@ extern crate serde_derive;
 #[macro_use]
 extern crate serde_json;
 
+#[macro_use]
+extern crate lazy_static;
+
 mod metadata;
 mod renderer;
+
+mod document;
 
 pub mod config;
 pub mod fs;
