@@ -9,9 +9,10 @@ use document_tree::element_categories::{
     BodyElement as BE, StructuralSubElement as SSE, SubStructure as SS,
     TextOrInlineElement as TOIE,
 };
-use document_tree::elements::{CommonAttributes, LiteralBlock, Raw, Section};
+use document_tree::elements::{LiteralBlock, Raw, Section};
 use document_tree::extra_attributes;
 
+use crate::document::{MyCommonAttributes, MyDocument, MyLiteralBlock, MySection};
 use crate::highlighter::Highlighter;
 
 /// returns HTML result rendered in partial mode.
@@ -23,54 +24,6 @@ pub fn render(s: &str) -> Result<String, Error> {
         }
         Ok(mut doc) => render_html_with_highlight(&mut doc),
     }
-}
-
-struct MyDocument {
-    pub children: Vec<SSE>,
-}
-
-impl MyDocument {
-    pub fn children(&self) -> Vec<SSE> {
-        self.children.clone()
-    }
-}
-
-#[allow(dead_code)]
-struct MySection {
-    common: CommonAttributes,
-    pub children: Vec<SSE>,
-}
-
-impl MySection {
-    pub fn children(&self) -> Vec<SSE> {
-        self.children.clone()
-    }
-}
-
-#[allow(dead_code)]
-struct MyCommonAttributes {
-    ids: Vec<String>,
-    names: Vec<String>,
-    source: Option<String>,
-    pub classes: Vec<String>,
-}
-
-#[allow(dead_code)]
-struct MyLiteralBlock {
-    common: CommonAttributes,
-    extra: extra_attributes::LiteralBlock,
-    pub children: Vec<TOIE>,
-}
-
-impl MyLiteralBlock {
-    pub fn children(&self) -> Vec<TOIE> {
-        self.children.clone()
-    }
-}
-
-#[allow(dead_code)]
-fn print_type<T>(_: &T) {
-    println!("{}", std::any::type_name::<T>())
 }
 
 fn highlight(lb: &LiteralBlock, hi: &Highlighter) -> Raw {
